--- a/supervisor.conf
+++ b/supervisor.conf
@@ -3,7 +3,7 @@ command=vncserver -geometry 1920x1080 :1
 user=ubuntu
 
 [program:noVNC]
-command=/home/ubuntu/noVNC/utils/launch.sh --vnc localhost:5901
+command=/home/ubuntu/noVNC/utils/launch.sh --listen 8080 --vnc localhost:5901
 user=ubuntu
 stdout_logfile=/var/log/novnc.log
 redirect_stderr=true
