--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,9 +1,9 @@
 [program:vncserver]
-command=vncserver -geometry 1024x768 :1
-user=ubuntu
+command=vncserver :1 -geometry 1920x1080 -depth 24
+user=root
 
 [program:noVNC]
-command=/home/ubuntu/noVNC/utils/launch.sh --listen 8080 --vnc localhost:5901
-user=ubuntu
+command=/root/noVNC/utils/launch.sh --listen 8080 --vnc localhost:5901
+user=root
 stdout_logfile=/var/log/novnc.log
 redirect_stderr=true
