--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,9 +1,9 @@
 [program:vncserver]
 command=vncserver :1 -geometry 1920x1080 -depth 24
-user=root
+user=ubuntu
 
 [program:noVNC]
-command=/root/noVNC/utils/launch.sh --listen 8080 --vnc localhost:5901
-user=root
+command=/home/ubuntu/noVNC/utils/launch.sh --listen 8080 --vnc localhost:5901
+user=ubuntu
 stdout_logfile=/var/log/novnc.log
 redirect_stderr=true
