--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,5 +1,5 @@
 [program:vncserver]
-command=vncserver :1 -geometry 1920x1080 -depth 24
+command=vncserver -geometry 1600x900 :1
 user=ubuntu
 
 [program:noVNC]
