--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -21,6 +21,7 @@ spec:
         env:
            - name: VNC_RESOLUTION
              value: 1920x1080
+             user: 0
         resources:
             limits:
               cpu: 500m
