--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -23,8 +23,8 @@ spec:
              value: 1920x1080
         resources:
             limits:
-              cpu: 2000m
-              memory: 2Gi
-            requests:
               cpu: 500m
+              memory: 512Mi
+            requests:
+              cpu: 100m
               memory: 256Mi
